# link-reductor

./: README.md  docker-compose.yml
.github/workflows/: tests.yml
back/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
back/app/url/: apps.py  models.py  serializers.py  urls.py  views.py
back/app/url/migrations/: 0001_initial.py  0002_url_slug_alter_url_url.py
back/compose/: Dockerfile  entrypoint.sh
back/config/: asgi.py  settings.py  urls.py  wsgi.py
back/tests/: conftest.py
back/tests/url/: test_views.py
front/: .prettierrc  Dockerfile  README.md  package.json  pnpm-lock.yaml  prettier.config.ts  vitest.config.ts
front/src/app/: layout.tsx  page.tsx
front/src/components/: input-field.tsx  url-form.tsx  url-result.tsx
front/src/components/form/: index.tsx
front/src/components/result/: copy-link-button.tsx  index.tsx  share-url-button.tsx  show-button.tsx
front/src/hooks/: use-url-form.tsx
front/src/lib/: api.ts  utils.ts
front/src/types/: index.ts
front/tests/: vitest.setup.ts
front/tests/lib/: api.test.ts  utils.test.ts
