[tool.poetry]
name = "back"
version = "0.1.0"
description = "Link reductor API."
authors = ["raphaellndr <raph.landure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
django = "6.0.1"
djangorestframework = "3.16.1"
drf-spectacular = "0.29.0"
django-environ = "0.12.0"
psycopg2-binary = "2.9.11"
django-cors-headers = "^4.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.14.10"
mypy = "1.19.1"
pre-commit = "4.5.1"
pytest-django = "4.11.1"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["back"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
